docs: Add docs for delete openings route
